--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "formik": "^2.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
@@ -44,7 +44,8 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4",
+    "ajv": "^8.17.1",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
