--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
-  "homepage": "https://Subhashreemuduli.github.io/Invoice-Form-App",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
